--- a/config-example.yaml
+++ b/config-example.yaml
@@ -26,7 +26,7 @@ params:
   cover: "/img/cover.jpg"                   # main image used for cover splashpage
   fullCover: true                           # fullscreen cover (true) or allow a peek of content (false) defaults to true
   logo: "/img/logo.svg"                     # site logo. appears in upper-left corner of site
-  author: "dennis"                          # default site author
+  author: "dennis"                          # default site editor
   creativeCommons: "by-sa"                  # if you license using creative commons, set this to be your license type. Requires .Site.copyright to be set as well.
   hideHUGOSupport: true                     # by default, hasper puts a nod to hugo in footer, set to true if you wish to hide
   githubName: ""                            # if set, hasper will display github logo with link above site title
@@ -42,7 +42,7 @@ params:
     google-plus: true
     pinterest: false
 
-# authors config. use this section to provide full meta-data about the authors on your site
+# editors config. use this section to provide full meta-data about the editors on your site
 author:
   dennis:
     id: "dennis"                            # author's id/short name
@@ -50,7 +50,7 @@ author:
     lastName: "Coldwell"                    # author's last name
     displayName: "dennis"                   # author's prefered display name
     location: "Berkeley, CA"                # author's whereabouts
-    bio: "trying to leave things better than I found them."  # short bio, appears below author details on post
+    bio: "trying to leave things better than I found them."  # short bio, appears below editor details on post
     thumbnail: "/img/avatar.jpg"            # author's avatar
   mikasa:
     id: "mikasa"
